# fira_esi

./: .gitignore  CMakeLists.txt  package.xml
cfg/: fira_esi_dynamic_cfg.cfg  vision_dynamic_reconfigure.cfg
include/fira_esi/vision/: mycv.h
include/vision/: alldefine.h  findlines.h  linezxz.h
launch/: fira_esi_flow.launch
param/: controller.yaml  controller_backup.yaml  vision.yaml  vision_backup.yaml  vision_red_gate.yaml
src/: Action.cpp  Action.h  FlowController.cpp  FlowController.h  PIDController.cpp  PIDController.h  PX4Interface.cpp  PX4Interface.h  Task.cpp  Task.h  VisionInterface.cpp  VisionInterface.h  fira_esi_node.cpp  utils.h  vision_test.h
src/controller/: Action.cpp  Action.h  FlowController.cpp  FlowController.h  PIDController.cpp  PIDController.h  Task.cpp  Task.h
src/interface/: ClawInterface.cpp  ClawInterface.h  DynamicRecfgInterface.cpp  DynamicRecfgInterface.h  PX4Interface.cpp  PX4Interface.h  VisionInterface.cpp  VisionInterface.h
src/utils/: JudgeAchieveCounter.cpp  JudgeAchieveCounter.h  utils.cpp  utils.h
src/vision/: alldefine.h  findlines.cpp  findlines.h  linesort.cpp  linesort.h  linezxz.cpp  linezxz.h  mycv.cpp  mycv.h  zed_qr_node.cpp
