<?xml version="1.0"?>
<package format="2">
  <name>fira_esi</name>
  <version>1.0.0</version>
  <description>The fira_esi package. Create for FIRA-2019 Emergency Service Indoor Competition. Northwestern Polytechnical University VWPP-UAV team.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="kehan.xue@gmail.com">Kehan.Xue</maintainer>
  <maintainer email="657083620@qq.com">Xiaopeng.Yan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

